--- a/Kubernetes/pod.yaml
+++ b/Kubernetes/pod.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Pod
 metadata: 
@@ -10,4 +11,20 @@ spec:
       image: httpd
       ports: 
         - containerPort: 80
-  
+...
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-svc
+  labels
+    env: dev-pod
+spec:
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 80
+      targetport: 80
+...
+
