--- a/Kubernetes/rc.yaml
+++ b/Kubernetes/rc.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: my-container
           image: httpd
-          port: 
+          ports: 
             containerPort: 80
   replicas: 3
   selector:
