--- a/Kubernetes/rc.yaml
+++ b/Kubernetes/rc.yaml
@@ -16,7 +16,7 @@ spec:
         - name: my-container
           image: httpd
           ports: 
-            containerPort: 80
+            - containerPort: 80
   replicas: 3
   selector:
     env: dev
