--- a/Kubernetes/deploymwnt.yaml
+++ b/Kubernetes/deploymwnt.yaml
@@ -1,8 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
+  name: my-deployment
   labels: 
     env: dev
+  namespace: default
 spec: 
   template:
     metadata:
