--- a/Kubernetes/deploymwnt.yaml
+++ b/Kubernetes/deploymwnt.yaml
@@ -18,7 +18,7 @@ spec:
             - containerPort: 80
   replicas: 3
   selector:
-    matchlabels:
+    matchLabels:
       env: dev
   strategy:
     type: RollingUpdate
