--- a/Docker-project/Backend/dockerfile
+++ b/Docker-project/Backend/dockerfile
@@ -5,6 +5,7 @@ RUN tar -xzf apache-tomcat-8.5.98.tar.gz -C /opt/ && \
     rm -rf ./apache-tomcat-8.5.98.tar.gz
 WORKDIR /opt/apache-tomcat-8.5.98
 COPY context.xml conf/context.xml
+ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-8.5.98
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar lib/mysql-connector.jar
 COPY student.war webapps/student.war
 EXPOSE 8080
