--- a/Docker-project/Backend/dockerfile
+++ b/Docker-project/Backend/dockerfile
@@ -7,6 +7,6 @@ WORKDIR /opt/apache-tomcat-8.5.98
 COPY context.xml conf/context.xml
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-8.5.98
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar lib/mysql-connector.jar
-COPY student.war webapps/student.war
+COPY /opt/apache-tomcat-8.5.98/student.war webapps/student.war
 EXPOSE 8080
 CMD ["./bin/catalina.sh", "run"]
